ministr-tui/tests/snapshots/snapshot__detail_building_shows_the_live_meter.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 120, 36)"
---
"  ministr                                                                                             engine ● running  "
"  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  "
"  │ cohaero                                                                                                          │  "
"  │                                                                                                                  │  "
"  │ paths                                                                                                            │  "
"  │   /Users/alrik/Code/cohaero                                                                                      │  "
"  │   /Users/alrik/Code/cohaero-content                                                                              │  "
"  │                                                                                                                  │  "
"  │ standing      updating 43%                                                                                       │  "
"  │               ██████████▍                                                                                        │  "
"  │ files         1204                                                                                               │  "
"  │ sections      5210                                                                                               │  "
"  │ symbols       903                                                                                                │  "
"  │ last built    4 minutes ago                                                                                      │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  "
"  e edit paths   r rebuild   x remove   esc back   q quit                                                               "
