ministr-tui/tests/snapshots/snapshot__detail_editing_paths.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 120, 36)"
---
"  ministr                                                                                             engine ● running  "
"  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  "
"  │ cohaero                                                                                                          │  "
"  │                                                                                                                  │  "
"  │ paths                                                                                                            │  "
"  │   /Users/alrik/Code/cohaero                                                                                      │  "
"  │   /Users/alrik/Code/cohaero-content                                                                              │  "
"  │   add another path                                                                                               │  "
"  │                                                                                                                  │  "
"  │ standing      needs update                                                                                       │  "
"  │ files         1204                                                                                               │  "
"  │ sections      5210                                                                                               │  "
"  │ symbols       903                                                                                                │  "
"  │ last built    4 minutes ago                                                                                      │  "
"  │ on disk       1.2 GB                                                                                             │  "
"  │                                                                                                                  │  "
"  │ 3 files changed · 1 new since the last build                                                                     │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  "
"  ↑ ↓ path   enter save   esc cancel                                                                                    "
