ministr-tui/tests/snapshots/snapshot__detail_filled_spacious.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 120, 36)"
---
"  ministr                                                                                             engine ● running  "
"  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  "
"  │ cohaero                                                                                                          │  "
"  │                                                                                                                  │  "
"  │ paths                                                                                                            │  "
"  │   /Users/alrik/Code/cohaero                                                                                      │  "
"  │   /Users/alrik/Code/cohaero-content                                                                              │  "
"  │                                                                                                                  │  "
"  │ standing      needs update                                                                                       │  "
"  │ files         1204                                                                                               │  "
"  │ sections      5210                                                                                               │  "
"  │ symbols       903                                                                                                │  "
"  │ last built    4 minutes ago                                                                                      │  "
"  │                                                                                                                  │  "
"  │ 3 files changed · 1 new since the last build                                                                     │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  "
"  e edit paths   r rebuild   x remove   esc back   q quit                                                               "
