ministr-tui/tests/snapshots/snapshot__detail_still_loading_spacious.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 120, 36)"
---
"  ministr                                                                                             engine ● running  "
"  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  "
"  │ cohaero                                                                                                          │  "
"  │                                                                                                                  │  "
"  │ paths                                                                                                            │  "
"  │   …                                                                                                              │  "
"  │                                                                                                                  │  "
"  │ standing      needs update                                                                                       │  "
"  │ files         1204                                                                                               │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  "
"  e edit paths   r rebuild   x remove   esc back   q quit                                                               "
